--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<img src="images/portrait.jpeg" alt="" class="avatar">
 		</div>
 		<div class="eight columns">
-			<h1 class="hi" style="font-family: 'Abel'; color: #3f7f7c; ">Annie Zhang of NuStream Realty Inc.</h2>
+			<h1 class="hi" style="font-family: 'Abel'; color: #3f7f7c; font-size: 49px;">Annie Zhang of NuStream Realty Inc.</h1>
 			<p class="bio, speech-bubble" style="padding: 15px; font-weight: ; font-family: 'Abel';">
 				<font size="5">" 
 						Your satisfaction is my greatest motivation.
@@ -76,7 +76,7 @@
 				</font>
 			</p>
 			<h3 class="" style="font-family: 'Abel'; color: #3f7f7c; font-size: 33px;">
-				<p class="mobile-contact"><i class="fa fa-phone fa-md"></i> 778-893-5429 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<p class="mobile-contact"><i class="fa fa-phone fa-md"></i> 778-893-5429 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				anniezhang2004@gmail.com <i class="fa fa-envelope fa-md"></i></p>
 			</h3>
 		</div>
@@ -89,7 +89,7 @@
 		<div class="four columns portfolio">
 			<a class="image-link" href="images/1.jpg"><img src="images/1.jpg" /></a>
 			<p class="property-description">
-				8711 General Currie Road - Price: $2,000,000 CDN
+				8711 General Currie Road - Price: $2,000,000
 				<details class="property-details">
 					<summary>Click to View Listing</summary>
   					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -99,7 +99,7 @@
 		<div class="four columns portfolio">
 			<a class="image-link" href="images/2.jpg"><img src="images/2.jpg" /></a>
 			<p class="property-description">
-				8711 General Currie Road - Price: $2,000,000 CDN
+				8711 General Currie Road - Price: $2,000,000
 				<details class="property-details">
 					<summary>Click to View Listing</summary>
   					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -109,7 +109,7 @@
 		<div class="four columns portfolio" >
 			<a class="image-link" href="images/3.jpg""><img src="images/3.jpg" /></a>
 			<p class="property-description">
-				8711 General Currie Road - Price: $2,000,000 CDN
+				8711 General Currie Road - Price: $2,000,000
 				<details class="property-details">
 					<summary>Click to View Listing</summary>
   					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -121,7 +121,7 @@
 			<div class="four columns portfolio">
 			<a class="image-link" href="images/4.jpg"><img src="images/4.jpg" /></a>
 			<p class="property-description">
-				8711 General Currie Road - Price: $2,000,000 CDN
+				8711 General Currie Road - Price: $2,000,000
 				<details class="property-details">
 					<summary>Click to View Listing</summary>
   					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -131,7 +131,7 @@
 		<div class="four columns portfolio">
 			<a class="image-link" href="images/5.jpg"><img src="images/5.jpg" /></a>
 			<p class="property-description">
-				8711 General Currie Road - Price: $2,000,000 CDN
+				8711 General Currie Road - Price: $2,000,000
 				<details class="property-details">
 					<summary>Click to View Listing</summary>
   					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -141,7 +141,7 @@
 		<div class="four columns portfolio" >
 			<a class="image-link" href="images/6.jpg""><img src="images/6.jpg" /></a>
 			<p class="property-description">
-				8711 General Currie Road - Price: $2,000,000 CDN
+				8711 General Currie Road - Price: $2,000,000
 				<details class="property-details">
 					<summary>Click to View Listing</summary>
   					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
