--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<img src="images/portrait.jpeg" alt="" class="avatar">
 		</div>
 		<div class="eight columns">
-			<h1 class="hi" style="font-family: 'Abel'; color: #3f7f7c; font-size: 49px;">Annie Zhang of NuStream Realty Inc.</h1>
+			<h1 class="hi" style="font-family: 'Abel'; color: #3f7f7c; font-size: 47px;">Annie Zhang of NuStream Realty Inc.</h1>
 			<p class="bio, speech-bubble" style="padding: 15px; font-weight: ; font-family: 'Abel';">
 				<font size="5">" 
 						Your satisfaction is my greatest motivation.
@@ -76,7 +76,7 @@
 				</font>
 			</p>
 			<h3 class="" style="font-family: 'Abel'; color: #3f7f7c; font-size: 33px;">
-				<p class="mobile-contact"><i class="fa fa-phone fa-md"></i> 778-893-5429 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<p class="mobile-contact"><i class="fa fa-phone fa-md"></i> 778-893-5429 &nbsp;&nbsp;&nbsp;&nbsp;
 				anniezhang2004@gmail.com <i class="fa fa-envelope fa-md"></i></p>
 			</h3>
 		</div>
