--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<img src="images/portrait.jpeg" alt="" class="avatar">
 		</div>
 		<div class="eight columns">
-			<h1 class="hi" style="font-family: 'Abel'; color: #3f7f7c; font-size: 45px;">Annie Zhang of NuStream Realty Inc.</h1>
+			<h1 class="hi">Annie Zhang of NuStream Realty Inc.</h1>
 			<p class="bio, speech-bubble" style="padding: 15px; font-weight: ; font-family: 'Abel';">
 				<font size="5">" 
 						Your satisfaction is my greatest motivation.
