--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
 
+  <link rel="stylesheet" href="css/animate.min.css">
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
+
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->  
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -68,15 +71,15 @@
 			<img src="images/portrait.jpeg" alt="" class="avatar">
 		</div>
 		<div class="eight columns">
-			<h1 class="hi">Annie Zhang of NuStream Realty Inc.</h1>
-			<p class="bio, speech-bubble" style="padding: 15px; font-weight: ; font-family: 'Abel';">
+			<h1 class="hi animated fadeInLeft">Annie Zhang of NuStream Realty Inc.</h1>
+			<p class="bio, speech-bubble animated pulse" style="padding: 15px; font-weight: ; font-family: 'Abel';">
 				<font size="5">" 
 						Your satisfaction is my greatest motivation.
 						My penchant for excellence will ensure the best representation for you and your property. "
 				</font>
 			</p>
 			<h3 class="" style="font-family: 'Abel'; color: #3f7f7c; font-size: 33px;">
-				<p class="mobile-contact"><i class="fa fa-phone fa-md"></i> 778-893-5429 &nbsp;&nbsp;&nbsp;&nbsp;
+				<p class="mobile-contact animated fadeInRight"><i class="fa fa-phone fa-md"></i> 778-893-5429 &nbsp;&nbsp;&nbsp;&nbsp;
 				anniezhang2004@gmail.com <i class="fa fa-envelope fa-md"></i></p>
 			</h3>
 		</div>
