--- a/chinese.html
+++ b/chinese.html
@@ -72,7 +72,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 <div class="row purple" style="background: linear-gradient(180deg, #7accc8, #ECF8F6);">
 		<div>	
-		<a href="chinese.html"><button class="language-select">中文版</button></a>
+		<a href="index.html"><button class="language-select">English</button></a>
 	</div>
 	<div class="container" >
 		<div class="four columns">
@@ -264,7 +264,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 		</div>
 		</div>
 
-<!-- 	<center><div class="bio" style="font-style: italic;">Your journey starts here.</div></center> -->
+	<!-- <center><div class="bio" style="font-style: italic;">Your journey starts here.</div></center> -->
 </div>
 <!-- Container -->
 
