--- a/chinese.html
+++ b/chinese.html
@@ -97,14 +97,14 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 <section class="testimonials2 cid-qMW7kuphSQ" id="testimonials2-54" style="background-color: #ecf8f6; padding: 0px;">
     <div class="container align-center">
-        <h2 class="mbr-section-title mbr-fonts-style display-2" style="font-family: Satisfy, cursive; color: #427F7C">
-            What My Fantastic Clients Say
+        <h2 class="mbr-section-title mbr-fonts-style display-2" style="font-family: Satisfy, cursive; color: #427F7C; font-size: 32px;">
+            What My Fantastic Clients Say:
         </h2>
         <div class="mbr-row mbr-justify-content-center align-left">
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 md-pb">
                 <div class="card-wrapper">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    	Annie is one of the few agents who truly puts the customer first. I would choose her to be my agent again if I had another million to spend on a home.
                     </p>
                 </div>
                 <div class="triangle"></div>
@@ -123,7 +123,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                     <div class="signature">
                         <div class="author-name mbr-fonts-style display-6">
-                            John Smith
+                            Joanne Yu
                         </div>
                         <div class="author-title mbr-fonts-style mbr-light display-4">
                             Satisfied Client
@@ -135,7 +135,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 md-pb">
                 <div class="card-wrapper">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                         A real profession and a delight to work with. My estate was sold after only 15 days on the market. I'm very pleased.
                     </p>
                 </div>
                 <div class="triangle"></div>
@@ -154,7 +154,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                     <div class="signature">
                         <div class="author-name mbr-fonts-style display-6">
-                            John Smith
+                            Catherine Gu
                         </div>
                         <div class="author-title mbr-fonts-style mbr-light display-4">
                              Satisfied Client
@@ -166,7 +166,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        I picked Annie because she knows her stuff. She speaks fluent English and can negotiate with the Chinese.
                     </p>
                 </div>
                 <div class="triangle"></div>
@@ -185,7 +185,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                     <div class="signature">
                         <div class="author-name mbr-fonts-style display-6">
-                            John Smith
+                            John Flint
                         </div>
                         <div class="author-title mbr-fonts-style mbr-light display-4">
                             Satisfied Client
@@ -264,7 +264,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 		</div>
 		</div>
 
-	<!-- <center><div class="bio" style="font-style: italic;">Your journey starts here.</div></center> -->
+<!-- 	<center><div class="bio" style="font-style: italic;">Your journey starts here.</div></center> -->
 </div>
 <!-- Container -->
 
